--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <body>
   <div id="app"></div>
-  <script src="/dist/build.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 </body>
 
 </html>
